Eevee TAA not used for render viewport animation #64646

Closed
opened 2019-05-15 11:43:24 +02:00 by Daniel Paul · 9 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX TITAN X/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 64), branch: master, commit date: 2019-05-15 02:20, hash: d09289ff7a

Short description of error
Seems like TAA of eevee is not applied when "render viewport animation and image" is used.
The renderings look like it shoot only one sample.

F12 works, but viewport animation is much faster than ctrl + f12, even when sampling was applied some versions ago. And at the moment it's just more stable then rendering eevee over f12.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX TITAN X/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 64), branch: master, commit date: 2019-05-15 02:20, hash: `d09289ff7a` **Short description of error** Seems like TAA of eevee is not applied when "render viewport animation and image" is used. The renderings look like it shoot only one sample. F12 works, but viewport animation is much faster than ctrl + f12, even when sampling was applied some versions ago. And at the moment it's just more stable then rendering eevee over f12.
Author

Added subscriber: @DanielPaul

Added subscriber: @DanielPaul

#64747 was marked as duplicate of this issue

#64747 was marked as duplicate of this issue

This issue was referenced by b52a0c78af

This issue was referenced by b52a0c78aff3afd49c0712ee35ba01f6b48662f7
Clément Foucault was assigned by Daniel Paul 2019-05-15 11:44:56 +02:00
Clément Foucault was unassigned by Jeroen Bakker 2019-05-15 12:10:27 +02:00
Jeroen Bakker self-assigned this 2019-05-15 12:10:27 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Note seems to be that via background rendering the taa is not being respected. previously the FSAA would solve this, as we removed the FSAA we need to get TAA back for viewport rendering.

Note seems to be that via background rendering the taa is not being respected. previously the FSAA would solve this, as we removed the FSAA we need to get TAA back for viewport rendering.
Member

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Now it works, but there is small difference:
This is screenshot from viewport. And lines are not aliased due multisampling.
2121626.jpg

And this is vieport render.
untitled.png

I think, lines should have AA too (from render-settings). What do you think?

Now it works, but there is small difference: This is screenshot from viewport. And lines are not aliased due multisampling. ![2121626.jpg](https://archive.blender.org/developer/F7044651/2121626.jpg) And this is vieport render. ![untitled.png](https://archive.blender.org/developer/F7044653/untitled.png) I think, lines should have AA too (from render-settings). What do you think?
Member

Yes, it that is unrelated (non eevee and non Taa) so please open a new ticket for it

Yes, it that is unrelated (non eevee and non Taa) so please open a new ticket for it
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64646
No description provided.